Файлы распределены по папкам в соответствии по структурой проекта. Оптимизированы ошибки в процедурах регистрации и авторизации.

--- a/styles.css
+++ b/styles.css
@@ -203,3 +203,7 @@ img {
     margin-bottom: 2px;
   }
 }
+
+main {
+  margin-bottom: 100px; /* Замените 100px на необходимую высоту вашего футера */
+}
